<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tasbee Pro</string>
    <string name="appwidget_text">Tasbee Pro Widget</string>
    <string name="widget_description">Zikr counter home screen widget</string>
    <string name="add_widget">Add Widget</string>
    <string name="zikr_counter">Zikr Counter</string>
    <string name="target">Target</string>
    <string name="current">Current</string>
    <string name="progress">Progress</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="widget_settings">Widget Settings</string>
    <string name="zikr_type">Zikr Type</string>
    <string name="target_count">Target Count</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="widget_settings_desc">Settings</string>
    <string name="widget_counter_desc">Zikr counter</string>
    <string name="widget_tap_text">TAP</string>
    <string name="widget_reset_desc">Reset counter</string>
    <string name="widget_undo_desc">Undo last count</string>
    <string name="widget_config_title">Widget Settings</string>
    <string name="zikr_type_description">Select the type of zikr to be displayed in the widget</string>
    <string name="target_count_description">Set your daily zikr target count</string>
    <string name="sound_settings_title">🔊 Sound Settings</string>
    <string name="sound_effect">Sound Effect</string>
    <string name="widget_preview_title">👁️ Widget Preview</string>
    <string name="preview_target_text">Target: %1$d</string>
    <string name="target_completed_title">Target Completed! 🎉</string>
    <string name="target_completed_message">Mashallah! You have reached %1$d zikr count. May Allah accept it!</string>
    <string name="target_completed_toast_main">🎉 Mashallah! You have completed %1$d zikr!</string>
    <string name="target_completed_toast">✨ Target exceeded! (%1$d+) Keep going!</string>
    <string name="target_exceeded_title">Target Exceeded! ✨</string>
    <string name="target_exceeded_message">Mashallah! You have exceeded the target of %1$d. Your zikr continues!</string>
    <string name="notification_channel_name">Tasbee Notifications</string>
    <string name="notification_channel_description">Shows zikr target notifications</string>
    <string name="error_widget_update">Error occurred while updating widget: %1$s</string>
    <string name="error_widget_ids">Error occurred while getting widget IDs: %1$s</string>
    
    <!-- Premium Notifications -->
    <string name="premium_notification_channel_name">Premium Notifications</string>
    <string name="premium_notification_channel_description">Premium feature notifications</string>
    <string name="premium_notification_title">Premium Feature</string>
    <string name="premium_notification_text">Upgrade to Premium to use widget features</string>
    <string name="premium_notification_big_text">Premium subscription is required to use widget counter and settings features. You can open the app and upgrade to Premium.</string>
    <string name="widget_premium_required">Premium</string>
    
    <!-- Zikir Names -->
    <string name="zikir_subhanallah">Subhanallah</string>
    <string name="zikir_alhamdulillah">Alhamdulillah</string>
    <string name="zikir_allahu_akbar">Allahu Akbar</string>
    <string name="zikir_la_ilaha_illallah">La ilaha illAllah</string>
    <string name="zikir_estaghfirullah">Astaghfirullah</string>
    <string name="zikir_la_hawle_wala_quwwate">La hawla wa la quwwata illa billah</string>
    <string name="zikir_hasbi_allahu">HasbiyAllahu wa ni\'mal wakeel</string>
    <string name="zikir_rabbana_atina">Rabbana Atina</string>
    <string name="zikir_allahume_salli">Allahumma Salli</string>
    <string name="zikir_rabbi_zidni_ilmen">Rabbi Zidni Ilm</string>
    <string name="zikir_bismillah">Bismillah</string>
    <string name="zikir_innallaha_maas_sabirin">Innalaha ma\'as sabirin</string>
    <string name="zikir_allahu_latif">Allahu Latif</string>
    <string name="zikir_ya_rahman">Ya Rahman Ya Rahim</string>
    <string name="zikir_tabarak_allah">Tabarak Allah</string>
    <string name="zikir_mashallah">MashaAllah</string>
    
    <!-- Quran Widget -->
    <string name="quran_title">Quran</string>
    <string name="quran_widget_config_title">Quran Widget Settings</string>
    <string name="quran_widget_description">Read Quran verses on your home screen</string>
    <string name="sura_selection">Sura Selection</string>
    <string name="sura_selection_description">Choose the sura to start reading from</string>
    <string name="font_size_setting">Font Size</string>
    <string name="font_size_setting_description">Adjust the text size for better reading</string>
    <string name="font_size_label">Font Size: %1$d</string>
    <string name="small_text">Small</string>
    <string name="large_text">Large</string>
    <string name="current_ayah">Current Verse</string>
    <string name="total_ayahs">Total Verses</string>
    <string name="sura_progress">Sura Progress</string>
    <string name="open_quran">Open Quran</string>
    <string name="previous_ayah">Previous Verse</string>
    <string name="next_ayah">Next Verse</string>
    <string name="sura_number">Sura %1$d</string>


    <!-- Sura Names - 114 Suras -->
    <string name="sura_name_001">Al-Fatihah</string>
    <string name="sura_name_002">Al-Baqarah</string>
    <string name="sura_name_003">Aal-Imran</string>
    <string name="sura_name_004">An-Nisa</string>
    <string name="sura_name_005">Al-Ma\'idah</string>
    <string name="sura_name_006">Al-An\'am</string>
    <string name="sura_name_007">Al-A\'raf</string>
    <string name="sura_name_008">Al-Anfal</string>
    <string name="sura_name_009">At-Tawbah</string>
    <string name="sura_name_010">Yunus</string>
    <string name="sura_name_011">Hud</string>
    <string name="sura_name_012">Yusuf</string>
    <string name="sura_name_013">Ar-Ra\'d</string>
    <string name="sura_name_014">Ibrahim</string>
    <string name="sura_name_015">Al-Hijr</string>
    <string name="sura_name_016">An-Nahl</string>
    <string name="sura_name_017">Al-Isra</string>
    <string name="sura_name_018">Al-Kahf</string>
    <string name="sura_name_019">Maryam</string>
    <string name="sura_name_020">Taha</string>
    <string name="sura_name_021">The Prophets</string>
    <string name="sura_name_022">The Pilgrimage</string>
    <string name="sura_name_023">The Believers</string>
    <string name="sura_name_024">The Light</string>
    <string name="sura_name_025">The Criterion</string>
    <string name="sura_name_026">The Poets</string>
    <string name="sura_name_027">The Ants</string>
    <string name="sura_name_028">The Stories</string>
    <string name="sura_name_029">The Spider</string>
    <string name="sura_name_030">The Romans</string>
    <string name="sura_name_031">Luqman</string>
    <string name="sura_name_032">The Prostration</string>
    <string name="sura_name_033">The Confederates</string>
    <string name="sura_name_034">Sheba</string>
    <string name="sura_name_035">The Originator</string>
    <string name="sura_name_036">Ya-Sin</string>
    <string name="sura_name_037">Those Ranged in Ranks</string>
    <string name="sura_name_038">Sad</string>
    <string name="sura_name_039">The Groups</string>
    <string name="sura_name_040">The Forgiver</string>
    <string name="sura_name_041">Explained in Detail</string>
    <string name="sura_name_042">The Consultation</string>
    <string name="sura_name_043">The Gold Adornment</string>
    <string name="sura_name_044">The Smoke</string>
    <string name="sura_name_045">The Kneeling</string>
    <string name="sura_name_046">The Sandhills</string>
    <string name="sura_name_047">Muhammad</string>
    <string name="sura_name_048">The Victory</string>
    <string name="sura_name_049">The Rooms</string>
    <string name="sura_name_050">Qaf</string>
    <string name="sura_name_051">The Scattering Winds</string>
    <string name="sura_name_052">The Mount</string>
    <string name="sura_name_053">The Star</string>
    <string name="sura_name_054">The Moon</string>
    <string name="sura_name_055">The Most Merciful</string>
    <string name="sura_name_056">The Inevitable</string>
    <string name="sura_name_057">The Iron</string>
    <string name="sura_name_058">The Pleading Woman</string>
    <string name="sura_name_059">The Gathering</string>
    <string name="sura_name_060">The Examined One</string>
    <string name="sura_name_061">The Ranks</string>
    <string name="sura_name_062">Friday</string>
    <string name="sura_name_063">The Hypocrites</string>
    <string name="sura_name_064">Loss and Gain</string>
    <string name="sura_name_065">Divorce</string>
    <string name="sura_name_066">The Prohibition</string>
    <string name="sura_name_067">The Kingdom</string>
    <string name="sura_name_068">The Pen</string>
    <string name="sura_name_069">The Inevitable</string>
    <string name="sura_name_070">The Ways of Ascent</string>
    <string name="sura_name_071">Noah</string>
    <string name="sura_name_072">The Jinn</string>
    <string name="sura_name_073">The Wrapped</string>
    <string name="sura_name_074">The Cloaked</string>
    <string name="sura_name_075">The Resurrection</string>
    <string name="sura_name_076">Man</string>
    <string name="sura_name_077">Those Sent Forth</string>
    <string name="sura_name_078">The Great News</string>
    <string name="sura_name_079">Those Who Pull Out</string>
    <string name="sura_name_080">He Frowned</string>
    <string name="sura_name_081">The Overthrowing</string>
    <string name="sura_name_082">The Cleaving</string>
    <string name="sura_name_083">The Defrauders</string>
    <string name="sura_name_084">The Rending</string>
    <string name="sura_name_085">The Stars</string>
    <string name="sura_name_086">The Night Comer</string>
    <string name="sura_name_087">The Most High</string>
    <string name="sura_name_088">The Overwhelming</string>
    <string name="sura_name_089">The Dawn</string>
    <string name="sura_name_090">The City</string>
    <string name="sura_name_091">The Sun</string>
    <string name="sura_name_092">The Night</string>
    <string name="sura_name_093">The Forenoon</string>
    <string name="sura_name_094">The Expansion</string>
    <string name="sura_name_095">The Fig</string>
    <string name="sura_name_096">The Clinging Clot</string>
    <string name="sura_name_097">The Night of Power</string>
    <string name="sura_name_098">The Clear Evidence</string>
    <string name="sura_name_099">The Earthquake</string>
    <string name="sura_name_100">The Runners</string>
    <string name="sura_name_101">The Striking Hour</string>
    <string name="sura_name_102">The Piling Up</string>
    <string name="sura_name_103">The Time</string>
    <string name="sura_name_104">The Slanderer</string>
    <string name="sura_name_105">The Elephant</string>
    <string name="sura_name_106">Quraysh</string>
    <string name="sura_name_107">Small Kindnesses</string>
    <string name="sura_name_108">The Abundance</string>
    <string name="sura_name_109">The Disbelievers</string>
    <string name="sura_name_110">The Divine Support</string>
    <string name="sura_name_111">The Palm Fiber</string>
    <string name="sura_name_112">The Purity</string>
    <string name="sura_name_113">The Daybreak</string>
    <string name="sura_name_114">Mankind</string>
    
    <!-- Quran Widget Premium Messages -->
    <string name="quran_premium_feature_title">Premium Feature 💎</string>
    <string name="quran_premium_feature_subtitle">Quran reading is a premium feature</string>
    <string name="quran_premium_notification_title">Quran Widget - Premium Feature 💎</string>
    <string name="quran_premium_notification_text">This feature requires premium subscription. Tap and upgrade to premium!</string>
</resources>